@@ -2,6 +2,8 @@
 
   * src/bfin/bfin-part.c (_bfin_part_init): Add missing "void" to param list.
 
+  * include/urjtag/parse.h: Document the various stream functions.
+
 2011-02-17  Mike Frysinger  <vapier@gentoo.org>
 
   * data/analog/bf548/STEPPINGS: Add bf54x-0.4 support.
